--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-axios": "^3.2.4",
     "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
